# Monorepo-MultiAgent

./: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  README.md  agent.mmd  docker-compose.yml  package-lock.json  package.json
apps/fastapi_backend/: .env.example  package-lock.json  package.json  pyproject.toml
apps/fastapi_backend/app/: main.py
apps/fastapi_backend/app/core/: config.py
apps/fastapi_backend/worker/: settings.py  tasks.py
apps/nextjs-frontend/: next.config.ts  package.json
apps/nextjs-frontend/src/app/: layout.tsx  page.tsx
apps/nextjs-frontend/src/app/components/: Sidebar.tsx  SidebarMenuItem.tsx  WebSocketInitializer.tsx  index.ts
apps/nextjs-frontend/src/app/components/chat/: ChatPanel.tsx
apps/nextjs-frontend/src/app/dashboard/[uuid]/: layout.tsx  page.tsx
apps/nextjs-frontend/src/app/dashboard/[uuid]/alcance/: SidebarConfig.tsx  page.tsx
apps/nextjs-frontend/src/app/dashboard/[uuid]/documentos/: page.tsx
apps/nextjs-frontend/src/app/dashboard/[uuid]/resultados/: page.tsx
apps/nextjs-frontend/src/lib/hooks/: useWebSocketListener.ts
apps/nextjs-frontend/src/lib/store/: useWebSocketStore.ts
