[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend application"
authors = [
    {name = "heggar", email = "heggar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "arq (>=0.26.3,<0.27.0)",
    "redis (==5.3.0)"
]


[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend application"
authors = ["heggar@gmail.com"]
packages = []

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.12,<0.116.0"
"uvicorn[standard]" = ">=0.34.2,<0.35.0"
pydantic = ">=2.11.4,<3.0.0"
"pydantic-settings" = ">=2.9.1,<3.0.0"
"python-dotenv" = ">=1.1.0,<2.0.0"
arq = ">=0.26.3,<0.27.0"
redis = "==5.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
